# BTech-Project

./: .gitignore  README.md
ESP32_codes/: Code_with_auto_agent.ino  code_initial.ino  stop_after_half_seconds.ino
fp_darc/: CMakeLists.txt  package.xml
fp_darc/config/: darc.pgm  darc.yaml  diff_drive_controller.yaml  joint_state_broadcaster.yaml  mapper_params_online_async.yaml  nav2_params.yaml  slam_params.yaml  view.rviz
fp_darc/launch/: control.launch.py  mapping_launch.py  navigation.launch.py  view_robot.launch.py
fp_darc/maps/: darc_room.yaml  elextron.pgm  elextron.yaml
fp_darc/meshes/: base_link.stl  left_wheel_link.stl  lidar_link.stl  right_wheel_link.stl
fp_darc/rviz/: view_mapping.rviz  view_urdf.rviz
fp_darc/urdf/: FP_DARC.urdf  fp_darc.urdf  materials.xacro  sweebo.urdf.xacro  sweebo_base.xacro
odometry/: package.xml  setup.py
odometry/odometry/: new_odom.py  odom_subscriber.py  ticks_to_odom.py
